# le-ou-la-vite

./: .env  .gitignore  README.md  index.html  nginx.conf  package.json  pnpm-lock.yaml  postcss.config.js  pyproject.toml  systemd.service  tailwind.config.js  vite.config.ts
.cursor/rules/: project.mdc
.github/workflows/: main.yml
backend/: db.py  main.py  prod.sh  utils.py
backend/models/: word_definintion.py
backend/routes/: __init__.py  definition.py
backend/schemas/: dictionary.json
public/: french-words.json
src/: App.tsx  main.tsx  utils.tsx
src/components/: NavBar.tsx
src/context/: theme.tsx
src/hooks/: FrenchDict.tsx
src/pages/: NotFound.tsx  SearchWord.tsx  WordDefinition.tsx
src/types/: utils.tsx
